# PaleNote

./: .env.example  .gitignore  .pre-commit-config.yaml  DockerFile  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/copilot/skills/: architecture.md  business-rules.md  coding-standards.md  domain-glossary.md  roadmap.md  testing-guidelines.md
.github/workflows/: quality-and-tests.yml
app/: dependencies.py  main.py
app/core/: app_exception.py  config.py  handlers.py  invoice_exceptions.py  lifespan.py  logger.py  user_exceptions.py  validator_exceptions.py
app/database/: base.py  session.py
app/models/: invoice.py  users.py
app/repositories/: invoice_repository.py
app/routers/: health.py  invoices.py
app/schemas/: error.py  invoice.py  users.py  validators.py
app/services/: document_validator.py  invoice_service.py
app/tests/: test_app_import.py
