[project]
name = "app"
version = "0.1.0"
description = "API para processamento e validação de notas fiscais eletrônicas"
authors = [
    { name = "Kaio Rodrigo de Mendonça Cardoso", email = "kaiomendonca.dev@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "celery>=5.6.3,<6.0.0",
    "colorlog>=6.10.1,<7.0.0",
    "fastapi>=0.136.3,<0.137.0",
    "greenlet>=3.5.1,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "passlib>=1.7.4,<2.0.0",
    "pillow>=12.2.0,<13.0.0",
    "psycopg>=3.3.4,<4.0.0",
    "psycopg-binary>=3.3.4,<4.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "PyJWT>=2.13.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "python-json-logger>=4.1.0,<5.0.0",
    "redis>=8.0.0,<9.0.0",
    "reportlab>=4.5.1,<5.0.0",
    "SQLAlchemy>=2.0.50,<3.0.0",
    "structlog>=25.5.0,<26.0.0",
    "uvicorn>=0.49.0,<0.50.0",
    "validate-docbr>=2.0.0,<3.0.0",
    "asyncpg (>=0.31.0,<0.32.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
infra = [
    "alembic>=1.18.4,<2.0.0",
    "celery>=5.6.3,<6.0.0",
    "psycopg>=3.3.4,<4.0.0",
    "psycopg-binary>=3.3.4,<4.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "redis>=8.0.0,<9.0.0",
    "uvicorn>=0.49.0,<0.50.0",
]
dev = [
    "pre-commit>=4.6.0,<5.0.0",
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "ruff>=0.15.16,<0.16.0",
    "taskipy>=1.14.1,<2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
test = "pytest"
lint = "ruff check ."
format = "ruff format ."